--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "clearpro-frontend",
+  "name": "clear-aligner-case-tracker",
   "version": "1.0.0",
-  "description": "Frontend for Clear Aligner Case Tracker Pro",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -9,8 +8,5 @@
   },
   "dependencies": {
     "express": "^4.19.2"
-  },
-  "engines": {
-    "node": ">=18"
   }
 }
